--- a/templates/index.html
+++ b/templates/index.html
@@ -265,7 +265,7 @@
 							</div>
 							<div class="destination_content">
 								<div class="destination_title"><a href="{% static 'destinations.html' %}"> {{dest.name}} </a></div>
-								<div class="destination_subtitle"><p> {{dest.des}} </p></div>
+								<div class="destination_subtitle"><p> {{dest.desc}} </p></div>
 								<div class="destination_price"> {{dest.price}} </div>
 							</div>
 						</div>
