reg done with automigrate

--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
     <title>Registration</title>
 </head>
 <body>
-    <form action="Register" method="POST">
+    <form action="register" method="POST">
         {% csrf_token %}
         <input type="text" name="first_name" placeholder="First Name"> <br>
         <input type="text" name="last_name" placeholder="Last Name"> <br>
