--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
 				<!-- Slide -->
 				<div class="owl-item">
 					<div class="background_image" 
-					style="background-image:url({% static 'images/home_slider.jpg' %})"></div>
+					style="background-image:url('static/images/home_slider.jpg')"></div>
 					<div class="home_slider_content_container">
 						<div class="container">
 							<div class="row">
@@ -118,7 +118,7 @@
 				<!-- Slide -->
 				<div class="owl-item">
 					<div class="background_image" 
-					style="background-image:url({% static 'images/home_slider.jpg' %})"></div>
+					style="background-image:url(static/images/home_slider.jpg)"></div>
 					<div class="home_slider_content_container">
 						<div class="container">
 							<div class="row">
@@ -135,7 +135,7 @@
 				<!-- Slide -->
 				<div class="owl-item">
 					<div class="background_image" 
-					style="background-image:url({% static 'images/home_slider.jpg' %})"></div>
+					style="background-image:url('/static/images/home_slider.jpg')"></div>
 					<div class="home_slider_content_container">
 						<div class="container">
 							<div class="row">
@@ -189,7 +189,7 @@
 	<!-- Intro -->
 
 	<div class="intro">
-		<div class="intro_background" style="background-image:url({% static 'images/beach.svg' %})"></div>
+		<div class="intro_background" style="background-image:url('images/beach.svg')"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col">
@@ -280,7 +280,7 @@
 	<!-- Testimonials -->
 
 	<div class="testimonials" id="testimonials">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/testimonials.jpg" data-speed="0.8"></div>
+		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="{% static 'images/testimonials.jpg' %}" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col text-center">
@@ -372,7 +372,7 @@
 
 						<!-- News Post -->
 						<div class="news_post d-flex flex-md-row flex-column align-items-start justify-content-start">
-							<div class="news_post_image"><img src="images/news_2.jpg" alt=""></div>
+							<div class="news_post_image"><img src="{% static 'images/news_2.jpg' %}" alt=""></div>
 							<div class="news_post_content">
 								<div class="news_post_date d-flex flex-row align-items-end justify-content-start">
 									<div>01</div>
@@ -392,7 +392,7 @@
 
 						<!-- News Post -->
 						<div class="news_post d-flex flex-md-row flex-column align-items-start justify-content-start">
-							<div class="news_post_image"><img src="images/news_3.jpg" alt=""></div>
+							<div class="news_post_image"><img src="{% static 'images/news_3.jpg' %}" alt=""></div>
 							<div class="news_post_content">
 								<div class="news_post_date d-flex flex-row align-items-end justify-content-start">
 									<div>29</div>
@@ -440,7 +440,7 @@
 	<!-- Footer -->
 
 	<footer class="footer">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/footer_1.jpg" data-speed="0.8"></div>
+		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="{% static 'images/footer_1.jpg' %}" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col">
