--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,20 @@
 								<ul class="d-flex flex-row align-items-start justify-content-start">
 									<li class="active"><a href="{% static 'index.html' %}">Home</a></li>
 									<li><a href="contact.html">Contact</a></li>
+
+									{% if user.is_authenticated %}
+									<li><a href="accounts/logout">Logout</a></li>
+									{% else %}
 									<li><a href="accounts/register">Register</a></li>
+									<li><a href="accounts/login">Login</a></li>
+									{% endif %}
 								</ul>
 							</nav>
+							{% if user.is_authenticated %}
+
+							<div class="header_phone ml-auto">Hello, {{user.first_name}}</div>
+							{% endif %}
+
 							<div class="header_phone ml-auto">Call us: 00-56 445 678 33</div>
 
 							<!-- Hamburger -->
